# Nabeeh

./: .gitignore  .vercelignore  ARCHITECTURE.md  README.md  catalog.md  pyproject.toml  vercel.json
api/: chat.py  health.py  tasi.py
backend/: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/core/: exceptions.py
backend/app/modules/alerts/: schemas.py  service.py  template.py  threading.py
backend/app/modules/assistant/: router.py  schemas.py  service.py
backend/app/modules/news/: repository.py  router.py  schemas.py  service.py
backend/app/modules/notes/: fallback.py  repository.py  schemas.py  service.py
backend/app/modules/prices/: repository.py  router.py  schemas.py  service.py
backend/app/modules/prices/providers/: base.py  factory.py  yfinance_provider.py
backend/app/modules/risk/: repository.py  router.py  schemas.py  service.py
backend/app/modules/sentiment/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
backend/app/tasks/: compute_pivots.py  compute_risk.py  compute_stats.py  fetch_prices.py  news_pipeline.py  startup_health.py
backend/scripts/: backfill_risk_notes.py  seed_stocks.py
backend/tests/: test_un01_search.py  test_un02_risk_level.py  test_un03_risk_explanation.py
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: apply_v3_migrations.sql  build.sh  seed_stock_descriptions.py  seed_stocks.py  verify_pipeline.py
(+126 files in other folders)
